test/bad/lr1.pacc
/*
nopacc1 "pacc: fatal: left recursion in rule \`A'"
*/

A <- B / "a"
B <- C / "b"
C <- A / "c"
